# ripple

./: CMakeLists.txt  README.md  compile.sh  ripple.yml
apps/get-phash/: compile.sh  runGetPhash.cpp
apps/gph-phash/: app  compile.sh  runGphPhash.cpp
apps/matrioska/: compile.sh  config.txt  rwQuery.cpp
apps/rgpm/: rwQuery.cpp
apps/srw-psrw/: compile.sh  config.txt  rwQuery.cpp
data/: example.gph  msr-authors-sl.gph  query-10-path.gph  query-5-clique.gph  query-5-path.gph  query-6-path.gph  query-7-path.gph  query-8-path.gph  query-9-path.gph  query-square.gph  query-triangle.gph  test.gph  yeastbigcomp-sl-pr.gph  yeastbigcomp-sl.gph  yeastbigcomp-sl.snap
lib/SFMT-src-1.5.1/: Makefile
lib/bliss-0.73/: Makefile  graph.cc  graph.hh
misc/: pattern-hashes.txt
misc/patterns-gph-3-5/: create_in_escape_order.sh  map_escape.txt  sub-k3.1.escape.eps  sub-k3.1.escape.gph  sub-k3.2.escape.eps  sub-k3.2.escape.gph  sub-k4.1.escape.eps  sub-k4.1.escape.gph  sub-k4.2.escape.eps  sub-k4.2.escape.gph  sub-k4.3.eps  sub-k4.3.escape.gph  sub-k4.4.eps  sub-k4.4.escape.gph  sub-k4.5  sub-k4.5.eps  sub-k4.6.eps  sub-k4.6.escape.gph  sub-k5.1.escape.eps  sub-k5.1.escape.gph  sub-k5.10.escape.eps  sub-k5.10.escape.gph  sub-k5.11  sub-k5.11.eps  sub-k5.12  sub-k5.12.eps  sub-k5.12.escape.gph  sub-k5.13.eps  sub-k5.13.escape.eps  sub-k5.14.escape.gph  sub-k5.15.escape.gph  sub-k5.16.eps  sub-k5.16.escape.eps  sub-k5.16.escape.gph  sub-k5.17  sub-k5.17.escape.eps  sub-k5.17.escape.gph  sub-k5.18.escape.gph  sub-k5.19.eps  sub-k5.19.escape.eps  (+20 more)
scripts/: awk-commands.sh  buildRandomGraph.py  computeCores.py  compute_stats_output.sh  countTriangles.py  countTrianglesPartition.py  func_utils.py  parseEdgesListToGph.py  parseEdgesListToMotivo.py  parseGphToMotivo.py  run_rgpm.sh
scripts/ripple-evaluation/: convert-mem-scales.awk  div-cols-by.awk  gen_dataset_matryoshka_tourlog.sh  get-col-sum.awk  get-errors.awk  get-mean-stdesv.awk  get-timesec.awk  groupby-sum.awk  mv_files.sh  process-mathryoshka-all.sh  process_dataset_matryoshka-gt-test.sh  process_dataset_matryoshka-gt.sh  process_dataset_matryoshka-gt2-test.sh  process_dataset_matryoshka-gt2.sh  process_dataset_matryoshka-sys.sh  process_dataset_matryoshka-test.sh  process_dataset_matryoshka.sh  process_dataset_matryoshka2.sh  process_dataset_motivo-sys.sh  process_dataset_motivo2.sh  process_them_all-conv.sh  process_them_all-sys.sh  process_them_all.sh
src/: BasicEmbedding.cpp  BasicEmbeddingSpace.cpp  EdgeInducedEmbedding.cpp  EmbeddingUtils.cpp  Makefile  RGPMEmbeddingSpace.cpp  RippleEmbeddingSpace.cpp  SuperEmbedding.cpp  VertexInducedEmbedding.cpp  canonical.cpp  graph.cpp  random.cpp  utils.cpp
src/include/: BasicEmbedding.h  BasicEmbeddingSpace.h  EdgeInducedEmbedding.h  EmbeddingUtils.h  RGPMEmbeddingSpace.h  RippleEmbeddingSpace.h  Stats.h  SuperEmbedding.h  TourStats.h  VertexInducedEmbedding.h  cache.h  canonical.h  constants.h  dataReader.h  graph.h  graphSetReader.h  include_nauty.h  random.h  reservoir.h  utils.h
